--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,8 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
+    "@fluentui/react-components": "^9.68.3",
+    "@fluentui/react-icons": "^2.0.307",
     "electron-updater": "^6.3.9"
   },
   "devDependencies": {
