--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,11 @@
     "@electron-toolkit/utils": "^4.0.0",
     "@fluentui/react-components": "^9.68.3",
     "@fluentui/react-icons": "^2.0.307",
-    "electron-updater": "^6.3.9"
+    "axios": "^1.11.0",
+    "electron-updater": "^6.3.9",
+    "jwt-decode": "^4.0.0",
+    "react-router-dom": "^7.8.0",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
